# open-vm-tools

./: .frlog  .gitignore  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  open-vm-tools.init
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
checkvm/: .gitignore  Makefile.in
debian/: .gitignore  Makefile  README  changelog  control  control.modules.in  copyright  lintian  open-vm-source.README.Debian  open-vm-source.links  open-vm-toolbox.links  open-vm-toolbox.lintian-overrides  open-vm-toolbox.manpages  open-vm-tools-2.6.27-1-486-vyatta.postinst  open-vm-tools.init  open-vm-tools.links  (+5 more)
modules/: Makefile  Makefile.am  Makefile.in
modules/linux/pvscsi/: Makefile
modules/linux/shared/: compat_sock.h  driver-config.h  vmciKernelAPI1.h
modules/linux/vmblock/: Makefile
modules/linux/vmblock/include/: driver-config.h
modules/linux/vmblock/linux/: control.c  dentry.c  filesystem.c  inode.c
modules/linux/vmci/: Makefile  Makefile.kernel  Makefile.normal  vmciKernelIf.c  vmci_drv.c
modules/linux/vmci/linux/: driver.c
modules/linux/vmhgfs/: Makefile  Makefile.normal  compat_fs.h  dentry.c  driver-config.h  file.c  filesystem.c  fsutil.c  inode.c  page.c  request.c  super.c  tcp.c  transport.c
modules/linux/vmmemctl/: Makefile
modules/linux/vmsync/: Makefile  Makefile.normal  sync.c
modules/linux/vmxnet/: Makefile  vmxnet.c
modules/linux/vmxnet3/: Makefile  compat_netdevice.h  vmxnet3.c  vmxnet3_drv.c
modules/linux/vsock/: Makefile
modules/linux/vsock/linux/: af_vsock.c  util.c
(+150 files in other folders)
